--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NewsHub - Breaking News 24/7 | Latest World News & Updates</title>
-    <meta name="description" content="Stay informed with NewsHub - your trusted source for breaking news, world events, politics, business, technology, sports, and entertainment. 24/7 news coverage from around the globe." />
-    <meta name="author" content="NewsHub" />
+    <title>Sun International Tv - Breaking News 24/7 | Latest World News & Updates</title>
+    <meta name="description" content="Stay informed with Sun International Tv - your trusted source for breaking news, world events, politics, business, technology, sports, and entertainment. 24/7 news coverage from around the globe." />
+    <meta name="author" content="Sun International Tv" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="NewsHub - Breaking News 24/7" />
+    <meta property="og:title" content="Sun International Tv - Breaking News 24/7" />
     <meta property="og:description" content="Your trusted source for breaking news and in-depth analysis from around the world." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
