--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="/favicon.png" />
     <title>Sun International Tv - Breaking News 24/7 | Latest World News & Updates</title>
     <meta name="description" content="Stay informed with Sun International Tv - your trusted source for breaking news, world events, politics, business, technology, sports, and entertainment. 24/7 news coverage from around the globe." />
     <meta name="author" content="Sun International Tv" />
